# pi_asf_fastapi

./: .env  pyproject.toml
app/: main.py
app/db/: connection.py  depends.py
app/models/: alocacao_model.py  espacoinstituicao_model.py  evento_model.py  instituicao_model.py  models.py  participacao_model.py  pessoa_model.py
app/repositories/: alocacao_repository.py  espacoinstituicao_repository.py  evento_repository.py  instituicao_repository.py  participacao_repository.py  pessoa_repository.py
app/routes/: aapp_router.py  alocacao_router.py  espacoinstituicao_router.py  evento_router.py  instituicao_router.py  participacao_router.py  pessoa_router.py
app/schemas/: alocacao_schemas.py  espacaoinstituicao_schemas.py  evento_schemas.py  instituicao_schemas.py  participacao_schemas.py  pessoa_schemas.py  schemas.py
app/services/: alocacao_service.py  espacoinstituicao_service.py  evento_service.py  instituicao_service.py  participacao_service.py  pessoa_service.py
migrations/: env.py
migrations/versions/: d868bff9686d_add_pessoa_table.py
